Add a new API end point to retrieve the freezestate of an account A user can retrieve his own freezestate and an admin can retreieve all freezestate The freezetsate in only the status (0,1,2 or 4) and not the nb of notification which is useless for the user
