# backend/proxmox_api/swagger/swagger.yaml
@@ -11,6 +11,10 @@ info:
 servers:
 - url: https://backprox.minet.net/api/1.0.0
   description: Main URL
+- url: https://backprox-dev.minet.net/api/1.0.0
+  description: Backend dev URL
+- url: https://localhost:8080/api/1.0.0
+  description: Backend local URL
 security:
 - OAuth2: []
 paths:
@@ -206,7 +210,37 @@ paths:
         "404":
           description: vm not found
       x-openapi-router-controller: proxmox_api.controllers.default_controller
-      
+  /account_state/{username}:
+    get:
+      summary : get the freeze state of a user account 
+      operationId: get_account_state
+      parameters:
+        - name: username
+          in: path
+          description: username to get account state 
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+            example: "michel_j"
+      responses : 
+        "200" :
+          description : "The freeze state of the account"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/HistoryIdItem'
+                x-content-type: application/json
+        "400":
+          description: "invalid input, object invalid"
+        "403":
+          description: "not enough permissions"
+        "404":
+          description: vm not found
+      x-openapi-router-controller: proxmox_api.controllers.default_controller
   /cotisation:
     get:
       summary: check is the cotisation is up to date for a user
